# internal/api/server/restapi/api/get_user_progress.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package api
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+)
+
+// GetUserProgressHandlerFunc turns a function with the right signature into a get user progress handler
+type GetUserProgressHandlerFunc func(GetUserProgressParams) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn GetUserProgressHandlerFunc) Handle(params GetUserProgressParams) middleware.Responder {
+	return fn(params)
+}
+
+// GetUserProgressHandler interface for that can handle valid get user progress params
+type GetUserProgressHandler interface {
+	Handle(GetUserProgressParams) middleware.Responder
+}
+
+// NewGetUserProgress creates a new http.Handler for the get user progress operation
+func NewGetUserProgress(ctx *middleware.Context, handler GetUserProgressHandler) *GetUserProgress {
+	return &GetUserProgress{Context: ctx, Handler: handler}
+}
+
+/*
+	GetUserProgress swagger:route GET /get_user_progress/{tg_id} Progress getUserProgress
+
+Get User Progress
+*/
+type GetUserProgress struct {
+	Context *middleware.Context
+	Handler GetUserProgressHandler
+}
+
+func (o *GetUserProgress) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		*r = *rCtx
+	}
+	var Params = NewGetUserProgressParams()
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params) // actually handle the request
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
