# internal/api/server/restapi/api/get_user_progress_parameters.go
@@ -1,0 +1,77 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package api
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// NewGetUserProgressParams creates a new GetUserProgressParams object
+//
+// There are no default values defined in the spec.
+func NewGetUserProgressParams() GetUserProgressParams {
+
+	return GetUserProgressParams{}
+}
+
+// GetUserProgressParams contains all the bound params for the get user progress operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters GetUserProgress
+type GetUserProgressParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*The tg ID of user
+	  Required: true
+	  In: path
+	*/
+	TgID int64
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewGetUserProgressParams() beforehand.
+func (o *GetUserProgressParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	rTgID, rhkTgID, _ := route.Params.GetOK("tg_id")
+	if err := o.bindTgID(rTgID, rhkTgID, route.Formats); err != nil {
+		res = append(res, err)
+	}
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// bindTgID binds and validates parameter TgID from path.
+func (o *GetUserProgressParams) bindTgID(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: true
+	// Parameter is provided by construction from the route
+
+	value, err := swag.ConvertInt64(raw)
+	if err != nil {
+		return errors.InvalidType("tg_id", "path", "int64", raw)
+	}
+	o.TgID = value
+
+	return nil
+}
