# internal/api/server/restapi/handler/save_progress.go
@@ -2,9 +2,42 @@ package handler
 
 import (
 	"github.com/go-openapi/runtime/middleware"
+	"github.com/pskoob/miniappBack/internal/api/definition"
 	"github.com/pskoob/miniappBack/internal/api/server/restapi/api"
+	"github.com/pskoob/miniappBack/model"
+	"go.uber.org/zap"
 )
 
 func (h *Handler) SaveUserProgressHandler(req api.SaveProgressParams) middleware.Responder {
-	return api.NewSaveProgressOK()
+	zap.L().Info("save progress request")
+
+	ctx := req.HTTPRequest.Context()
+
+	err := h.userUsecase.SaveProgressByTgID(ctx, *req.Progress.AutoClicker, *req.Progress.ClickBooster, *req.Progress.CoinNumber, *req.Progress.TgID)
+	if err != nil {
+		zap.L().Error("error save user data", zap.Error(err))
+		return api.NewSaveProgressInternalServerError()
+	}
+	return api.NewSaveProgressOK().WithPayload(&definition.Error{
+		Message: &model.UserDataSaved,
+	})
+}
+
+func (h *Handler) GetUserProgressHandler(req api.GetUserProgressParams) middleware.Responder {
+	zap.L().Info("get user progress request")
+
+	ctx := req.HTTPRequest.Context()
+
+	user, err := h.userUsecase.GetUserByTgID(ctx, req.TgID)
+	if err != nil {
+		zap.L().Error("error get user by tg id", zap.Error(err))
+		return api.NewGetUserProgressInternalServerError()
+	}
+
+	return api.NewGetUserProgressOK().WithPayload(&definition.User{
+		TgID:         &user.TgID.Int64,
+		CoinNumber:   &user.Balance.Int64,
+		AutoClicker:  &user.AutoClicker,
+		ClickBooster: &user.ClickBooster.Int64,
+	})
 }
